--- a/app/templates/auth/home.html
+++ b/app/templates/auth/home.html
@@ -234,8 +234,8 @@
             <div class="flex items-center">
                 <img src="https://randomuser.me/api/portraits/men/32.jpg" alt="User" class="w-10 h-10 rounded-full">
                 <div class="hidden md:block ml-3">
-                    <p class="text-sm font-medium text-dark">John Farmer</p>
-                    <p class="text-xs text-gray-500">Premium Plan</p>
+                    <p class="text-sm font-medium text-dark">Otieno Farmer</p>
+                    <p class="text-xs text-gray-500">Regular Plan</p>
                 </div>
             </div>
         </div>
