--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -53,7 +53,7 @@
     {% include 'partials/mobile_nav.html' %}
 
     <!-- Main Content -->
-    <main class="pt-20 pl-64 pr-6 pb-6 transition-all duration-300 ease-in-out md:pl-64 sm:pl-0">
+    <main class="pt-20 mr-6 mb-6 transition-all duration-300 ease-in-out md:ml-64 sm:ml-3" style="padding-left: 1rem;">
         {% block content %}{% endblock %}
     </main>
 
