--- a/app/templates/dashboard/index.html
+++ b/app/templates/dashboard/index.html
@@ -14,7 +14,10 @@
         <p class="text-medium mt-1">Last updated: Today at 10:35 AM</p>
     </div>
     <div class="flex items-center">
-        <!-- <div class="text-sm font-medium mr-3">Auto-refresh</div> -->
+        <button id="refreshButton" class="bg-primary hover:bg-primary-dark text-white px-4 py-2 rounded-lg transition-colors shadow-md mr-4">
+            <i class="fas fa-sync-alt mr-2"></i>Refresh
+        </button>
+        <div class="text-sm font-medium mr-3">Auto-refresh</div>
         <div class="toggle-switch rounded-full relative cursor-pointer on"></div>
     </div>
 </div>
