--- a/app/templates/partials/header.html
+++ b/app/templates/partials/header.html
@@ -1,5 +1,5 @@
 <header class="bg-primary-dark text-white h-16 flex items-center px-6 fixed top-0 left-0 right-0 z-50 shadow-md">
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/notifications.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/components/notifications.css') }}">
     <script src="{{ url_for('static', filename='js/notifications.js') }}"></script>
     <div class="flex items-center">
         <!-- Logo -->
