--- a/app/templates/partials/growth_stage.html
+++ b/app/templates/partials/growth_stage.html
@@ -12,7 +12,7 @@
             <span class="text-sm font-medium">Day {{ growth.days or '28/62' }}</span>
         </div>
         <div class="progress-bar bg-light">
-            <div class="bg-primary h-full rounded" style="width: {{ growth.progress or '45' }}%"></div>
+            <div class="bg-primary h-full rounded" style="width: {{ growt.hprogress or '45' }}%"></div>
         </div>
     </div>
     <div class="mt-6">
